--- a/rtl/msxdos/Makefile.fpc
+++ b/rtl/msxdos/Makefile.fpc
@@ -10,7 +10,7 @@ units=system si_prc $(UUCHARUNIT) $(OBJPASUNIT) $(ISO7185UNIT) $(STRINGSUNIT) $(
 #$(UUCHARUNIT) $(OBJPASUNIT) $(STRINGSUNIT) dos $(HEAPTRCUNIT) $(LNFODWRFUNIT) $(SYSCONSTUNIT) sysutils \
 #      $(MATHUNIT) $(MACPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) $(RTLCONSTSUNIT) $(TYPINFOUNIT) $(CPUUNIT) $(TYPESUNIT) \
 #      $(GETOPTSUNIT) $(SORTBASEUNIT) $(FGLUNIT) classes \
-#      msmouse $(PORTSUNIT)  \
+#      $(MSMOUSEUNIT) $(PORTSUNIT)  \
 #      $(CHARSETUNIT) $(CPALLUNIT) $(CTYPESUNIT) \
 #      $(FPWIDESTRINGUNIT) $(CHARACTERUNIT) $(UNICODEDATAUNIT)
 #     $(CMEMUNIT)
@@ -106,9 +106,6 @@ classes$(PPUEXT) : classes.pp $(wildcard $(OBJPASDIR)/classes/*.inc) \
 #
 # Other system-dependent RTL Units
 #
-msmouse$(PPUEXT) : msmouse.pp system$(PPUEXT)
-        $(COMPILER) msmouse.pp $(REDIR)
-	$(EXECPPAS)
 
 si_prc$(PPUEXT) : system$(PPUEXT)
         $(COMPILER) si_prc.pp
