Set SYSUTILSDIR variable for OSes using unix/sysutils.pp main source

--- a/rtl/aix/Makefile.fpc
+++ b/rtl/aix/Makefile.fpc
@@ -65,6 +65,7 @@ DYNLIBSINCDIR=$(UNIXINC)
 DL_DEPS_OS=$(DLUNIT)aix.inc
 TERMIO_DEPS_OS=$(UNIXTYPEUNIT)$(PPUEXT) $(CTYPESUNIT)$(PPUEXT)
 DOSDIR=$(UNIXINC)
+SYSUTILSDIR=$(UNIXINC)
 
 SYSTEMUNIT=system
 
