--- a/rtl/dragonfly/Makefile.fpc
+++ b/rtl/dragonfly/Makefile.fpc
@@ -68,6 +68,7 @@ DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
 DYNLIBSINCDIR=$(UNIXINC)
 SYSCALL_DEPS_OS=sysnr.inc $(BSDPROCINC)/syscallh.inc
 BASEUNIX_DEPS_OS=$(SYSCTLUNIT)$(PPUEXT)
+SYSUTILSDIR=$(UNIXINC)
 
 SYSTEMUNIT=system
 loaders+=gprt0
