--- a/rtl/solaris/Makefile.fpc
+++ b/rtl/solaris/Makefile.fpc
@@ -62,6 +62,7 @@ DOSDIR=$(UNIXINC)
 DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
 DYNLIBSINCDIR=$(UNIXINC)
 TERMIO_DEPS_OS=$(UNIXTYPEUNIT)$(PPUEXT)
+SYSUTILSDIR=$(UNIXINC)
 
 SYSTEMUNIT=system
 
