--- a/rtl/nativent/Makefile.fpc
+++ b/rtl/nativent/Makefile.fpc
@@ -14,7 +14,7 @@ implicitunits=ndk ndkutils ddk \
 #      $(HEAPTRCUNIT)
 #      $(INITCUNIT) $(CMEMUNIT) $(DYNLIBSUNIT) signals \
       $(DOSUNIT) \
-      $(RTLCONSTSUNIT) $(SYSCONSTUNIT) sysutils $(MATHUNIT) $(TYPESUNIT) \
+      $(RTLCONSTSUNIT) $(SYSCONSTUNIT) $(SYSUTILSUNIT) $(MATHUNIT) $(TYPESUNIT) \
       $(TYPINFOUNIT) $(FGLUNIT) classes \
       $(CPU_UNITS) $(CHARSETUNIT) $(GETOPTSUNIT) \
       $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SFPU128UNIT) $(UFLOAT128UNIT) \
