--- a/rtl/nds/Makefile.fpc
+++ b/rtl/nds/Makefile.fpc
@@ -13,7 +13,7 @@ units=$(SYSTEMUNIT) $(UUCHARUNIT) $(OBJPASUNIT) $(MACPASUNIT) $(ISO7185UNIT) $(E
       $(CHARSETUNIT) $(CPALLUNIT) $(GETOPTSUNIT) \
       $(FPWIDESTRINGUNIT) $(CHARACTERUNIT) \
       $(TYPESUNIT) $(SYSCONSTUNIT) $(RTLCONSTSUNIT) $(LINEINFOUNIT) $(FGLUNIT) 
-#rsts=$(MATHUNIT) $(RTLCONSTSUNIT) varutils $(TYPINFOUNIT) variants classes $(SYSCONSTUNIT) dateutil fpmkunit
+#rsts=$(MATHUNIT) $(RTLCONSTSUNIT) $(TYPINFOUNIT) classes $(SYSCONSTUNIT)
 implicitunits=$(CP_UNITS) $(UNICODEDATAUNIT)
 
 [require]
